--- a/index.html
+++ b/index.html
@@ -190,10 +190,14 @@
       <div class="section">
         <div id="testimonialPage" class="content">
           <!-- Page header -->
-          <header class="page-header-container">
-            <h2 class="page-heading">Best In Business</h2>
-            <h3 class="page-subtitle">Happy Customers</h3>
-          </header>
+          <div class="headers">
+            <header class="page-header-container2">
+              <h2 class="page-heading">Best In Business</h2>
+              <h3 class="page-subtitle">
+                <span class="customers">Happy Customers</span>
+              </h3>
+            </header>
+          </div>
           <div id="testimonial-slider" class="owl-carousel">
             <!-- The content for the testimonials has been created using JavaScript. 
                 Please go to the inspect tool to see which classes were used to build the slider, 
