index.html scripts.js styles.css

--- a/index.html
+++ b/index.html
@@ -206,22 +206,53 @@
         </div>
       </div>
       <div class="section">
-        <div id="contactPage" class="content">
-          <!-- Page header -->
-          <header class="page-header-container">
-            <h2 class="page-heading">Questions?</h2>
-            <h3 class="page-subtitle">Let's get in touch</h3>
-          </header>
-          <!-- Contact Details -->
-          <div class="contact-details-container">
-            <h4 class="contact-details-heading">Warehouse Location</h4>
-            <p class="contact-details-description">
-              There are many variations of passages of Lorem Ipsum available,
-              but the majority have suffered .
-            </p>
-            <!-- Please insert location, contact numbers and email elements here -->
-          </div>
-          <!-- Create new form on FORMSPREE and insert ULR in the ACTION ATTRIBUTE -->
+        <div id="contactPage" class="content content2">
+          <section class="contactsection">
+            <div class="contactform">
+              <!-- Page header -->
+              <header class="page-header-container3">
+                <h2 class="page-heading">Questions?</h2>
+                <h3 class="main-color">Let's get in touch</h3>
+              </header>
+              <!-- Contact Details -->
+              <div class="contact-details-container3">
+                <h4 class="contact-details-heading">Warehouse Location</h4>
+                <p class="contact-details-description">
+                  There are many variations of passages of Lorem Ipsum
+                  available, but the majority have suffered .
+                </p>
+                <div class="contact-info">
+                  <p class="contact-details">
+                    <i class="fas fa-map-marker-alt"></i>123 Park Avenue, New
+                    York, United State
+                  </p>
+                  <p class="contact-details">
+                    <i class="fas fa-phone-volume"></i>+1 631 1234 5678 &nbsp;
+                    +1 631 1234 5678
+                  </p>
+                  <p class="contact-details">
+                    <i class="fas fa-paper-plane"></i> email@website.com
+                  </p>
+                  <div class="icons2">
+                    <div class="icon-container">
+                      <a href=""><i class="fab fa-facebook-f"></i></a>
+                    </div>
+                    <div class="icon-container">
+                      <a href=""><i class="fab fa-instagram"></i></a>
+                    </div>
+                    <div class="icon-container">
+                      <a href=""><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="icon-container">
+                      <a href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <!-- Please insert location, contact numbers and email elements here -->
+              </div>
+              <!-- Create new form on FORMSPREE and insert ULR in the ACTION ATTRIBUTE -->
+            </div>
+          </section>
           <form id="contact-form">
             <input
               class="contact-input"
@@ -253,7 +284,7 @@
               id="message"
               placeholder="Type your message here"
             ></textarea>
-            <button class="button" type="submit">Submit Information</button>
+            <button class="btn3">Submit Information</button>
           </form>
         </div>
       </div>
